2005-04-29 Alain Magloire
	Fix PR 90090 PR 93317
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManger.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/EventManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/Session.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/event/ExitedEvent.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Breakpoint.java
	* mi/org/eclipse/cdt/debug/mi/core/MISession.java

2005-02-01 Alain Magloire
	Part of Fix for PR 84165
	We check in the expression is a number and
	add a "*" for address watchpoint
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManager.java

2005-01-20 Mikhail Khodjaiants
	Fix for bug 83355: The disable/enable breakpoints durning debugging acts weird.
	* cdi\org\eclipse\cdt\debug\mi\core\cdi\model\Breakpoint.java
	* cdi\org\eclipse\cdt\debug\mi\core\cdi\BreakpointManager.java

2005-01-17 Alain Magloire
	Optimize the gathering of the data.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/MemoryBlock.java
	* build.properties

2005-01-13 Alain Magloire
	PR 82764 Fix the the type parsing.
	* mi/org/eclipse/cdt/debug/mi/core/GDBTypeParser.java

2005-01-10 Alain Magloire
	Fix for PR 82506
	* mi/org/eclipse/cdt/debug/mi/core/MISession.java
	* mi/org/eclipse/cdt/debug/mi/core/output/MIParser.java

2004-12-20 Alain Magloire
	Fix for PR 81019 for MacOsX
	* mi/org/eclipse/cdt/debug/mi/core/output/MIVarListChildrenInfo.java

2004-11-26 Alain Magloire
	Make the deferred breakpoint on by default.
	* cdi/org/eclipose/cdt/debug/mi/core/cdi/SharedLibraryManager.java

2004-11-26 Alain Magloire
	Final fix for PR 79583
	* cdi/org/eclipose/cdt/debug/mi/core/cdi/EventManager.java
	* cdi/org/eclipose/cdt/debug/mi/core/cdi/SharedLibraryManager.java

2004-11-26 Alain Magloire
	Final fix for PR 79452
	* cdi/org/eclipose/cdt/debug/mi/core/cdi/BreapointManager.java

2004-11-26 Alain Magloire
	Fix for PR 79582
	* src/org/eclipse/cdt/debug/mi/core/CygwinGDBCDIDebugger.java
	* src/org/eclipse/cdt/debug/mi/core/GDBServerCDIDebugger.java
