@@ -1,3 +1,7 @@
+2005-05-12 Alain Magloire
+	Fix PR 94841
+	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Variable.java
+
 2005-04-29 Alain Magloire
 	Fix PR 90090 PR 93317
 	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManger.java
